# crypto

./: .gitattributes  .gitignore  package-lock.json  package.json
crates/aes-modes/src/: lib.rs
crates/affine/: Cargo.toml
crates/affine/src/: lib.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs
crates/rsa/: Cargo.toml
crates/rsa/src/: lib.rs
crates/stego/: Cargo.toml
crates/stego/src/: lib.rs
src/data/: led-config.js
src/pages/: index.astro
web/: astro.config.mjs  package-lock.json  package.json
web/public/: cv.html  eddndev_public.json
web/src/components/: Footer.astro  Header.astro  Hero.astro  PracticeCard.astro
web/src/components/aes-modes/: AesModesWorkspace.tsx  useAesModesWasm.ts
web/src/components/home/: AboutCrypto.astro  Education.astro  Hobbies.astro  Presentation.astro
web/src/components/matrix/: MatrixCalculator.tsx  MatrixEditor.tsx  MatrixGrid.tsx  OperationSelector.tsx  ResultPanel.tsx  SlotBank.tsx  TracePanel.tsx  drag.ts  i18n.ts  operations.ts  resolve.ts  types.ts  useMatrixWasm.ts
web/src/components/rsa/: RsaWorkspace.tsx  useRsaWasm.ts
web/src/content/practices/: aes-modes-es.mdx  aes-modes.mdx  affine-cipher-es.mdx  affine-cipher.mdx  matrix-calculator-es.mdx  matrix-calculator.mdx  rsa-es.mdx  rsa.mdx  steganography.mdx
web/src/pages/: index.astro
web/src/pages/es/: index.astro
web/src/pages/practices/: aes-modes.astro  affine-cipher.astro  matrix-calculator.astro  rsa.astro  steganography.astro
web/src/scripts/animations/: scroll-animations.ts
web/src/styles/: global.css
(+24 files in other folders)
